--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "confidence_pool",
+  "name": "wizard_reviews",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "~3.2.0",
     "babel-preset-react": "~6.24.1",
+    "font-awesome": "^4.7.0",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
-    "react-dom": "~15.4.2"
+    "react-dom": "~15.4.2",
+    "react-router": "~3.2.0",
+    "react-stars-rating": "^0.0.5"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1",
     "enzyme": "~2.9.1",
     "jasmine-ajax": "3.2.0",
     "jasmine-core": "~2.4.1",
@@ -22,10 +24,14 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "2.0.1",
     "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2"
+    "react-addons-test-utils": "~15.6.2",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "start": "./bin/webpack-dev-server",
     "test": "node_modules/.bin/karma start karma.conf.js"
+  },
+  "engines": {
+    "node": ">=4.0"
   }
 }
