--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wizard_reviews",
+  "name": "confidence_pool",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "~3.2.0",
