--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-dropdown": "^1.3.6",
     "react-router": "~3.2.0",
+    "react-select-plus": "^1.1.0",
     "react-stars-rating": "^0.0.5"
   },
   "devDependencies": {
