--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "~3.2.0",
     "babel-preset-react": "~6.24.1",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^0.4.1",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
