--- a/package.json
+++ b/package.json
@@ -1,40 +1,52 @@
 {
-  "name": "confidence_pool",
+  "name": "poolv2",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "~3.2.0",
-    "babel-preset-react": "~6.24.1",
-    "font-awesome": "^4.7.0",
-    "html-react-parser": "^0.4.1",
+    "@rails/webpacker": "3.5",
     "prop-types": "~15.6.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
-    "react-dropdown": "^1.3.6",
-    "react-router": "~3.2.0",
-    "react-select-plus": "^1.1.0",
-    "react-stars-rating": "^0.0.5"
+    "react": "~16.8.0",
+    "react-dom": "~16.8.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-destructuring": "^7.6.0",
+    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.6.2",
+    "babel-loader": "^8.0.6",
+    "react-router-dom": "5.0.0",
+    "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "enzyme": "~2.9.1",
-    "jasmine-ajax": "3.2.0",
-    "jasmine-core": "~2.4.1",
-    "jasmine-enzyme": "~3.4.0",
-    "karma": "~0.13.22",
-    "karma-coverage": "0.5.5",
-    "karma-jasmine": "~0.3.8",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "2.0.1",
-    "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-cli": "^2.0.10",
+    "babel-jest": "^24.9.0",
+    "fetch-mock": "~5.13.1",
+    "jest": "^24.9.0",
+    "enzyme": "~3.10.0",
+    "enzyme-adapter-react-16": "~1.14.0"
   },
   "scripts": {
     "start": "./bin/webpack-dev-server",
-    "test": "node_modules/.bin/karma start karma.conf.js"
+    "test": "node_modules/.bin/jest",
+    "test:dev": "node_modules/.bin/jest --notify --watch"
   },
-  "engines": {
-    "node": ">=4.0"
+  "jest": {
+    "automock": false,
+    "roots": [
+      "spec/javascript",
+      "app/javascript"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript"
+    ],
+    "setupFiles": [
+      "./spec/javascript/support/enzyme.js"
+    ],
+    "testURL": "http://localhost/"
   }
 }
