draft of pick rework

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ yarn-error.log*
 .yarn-integrity
 /coverage
 .env
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
