--- a/package.json
+++ b/package.json
@@ -2,39 +2,27 @@
   "name": "confidence_pool",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "~3.2.0",
-    "babel-preset-react": "~6.24.1",
-    "font-awesome": "^4.7.0",
-    "html-react-parser": "^0.4.1",
-    "prop-types": "~15.6.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
-    "react-dropdown": "^1.3.6",
-    "react-router": "~3.2.0",
-    "react-select-plus": "^1.1.0",
-    "react-stars-rating": "^0.0.5"
+    "@babel/polyfill": "^7.4.4",
+    "@rails/webpacker": "4.3.0",
+    "jquery": "^2.2.4",
+    "prop-types": "^15.6.1",
+    "react": "~16.8.0",
+    "react-dom": "~16.8.0",
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
-    "enzyme": "~2.9.1",
-    "jasmine-ajax": "3.2.0",
-    "jasmine-core": "~2.4.1",
-    "jasmine-enzyme": "~3.4.0",
-    "karma": "~0.13.22",
-    "karma-coverage": "0.5.5",
-    "karma-jasmine": "~0.3.8",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "2.0.1",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "core-js": "2",
     "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "start": "./bin/webpack-dev-server",
+    "dev:client": "./bin/webpack-dev-server",
     "test": "node_modules/.bin/karma start karma.conf.js"
-  },
-  "engines": {
-    "node": ">=4.0"
   }
 }
