--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
-    "start": "./bin/webpack-dev-server",
+    "dev:client": "./bin/webpack-dev-server",
     "test": "node_modules/.bin/karma start karma.conf.js"
   },
   "engines": {
